--- a/message_center.html
+++ b/message_center.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+    <!-- 引入 header -->
+    <div id="header-container"></div>
+    <script src="header_loader.js"></script>
+    <main>
     <div class="message-center">
         <!-- 顶部导航栏 -->
         <div class="tab-menu">
@@ -83,6 +87,8 @@
             </ul>
         </div>
     </div>
+    </main>
+
 </body>
 
 </html>
