--- a/teacher_class.html
+++ b/teacher_class.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <!-- 引入 header -->
+    <div id="header-container"></div>
+    <script src="header_loader.js"></script>
     <div class="container">
         <!-- Left Section: Student List -->
         <div class="student-list">
