--- a/student_class.html
+++ b/student_class.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+    <!-- 引入 header -->
+    <div id="header-container"></div>
+    <script src="header_loader.js"></script>
+    
     <div class="container">
         <!-- Left Section: Course Info -->
         <div class="course-info">
