--- a/teacher_main.html
+++ b/teacher_main.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <!-- 引入 header -->
+    <div id="header-container"></div>
+    <script src="header_loader.js"></script>
     <div class="container">
         <h1>我的课程</h1>
         <table>
